[project]
name = "delorean"
version = "1.0.1"
description = "library for manipulating datetimes with ease and clarity"
authors = [
    { name = "Mahdi Yusuf",  email = "yusuf.mahdi@gmail.com" },
]
license = { text = "MIT" }
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "babel>=2.10.3",
    "humanize>=4.2.2",
    "python-dateutil>=2.8.2",
    "pytz>=2022.1",
    "tzlocal>=4.2",
]

[project.urls]
homepage = "https://delorean.readthedocs.io/"
repository = "https://github.com/myusuf3/delorean"
documentation = "https://delorean.readthedocs.io/"
"Bug Tracker" = "https://github.com/myusuf3/delorean/issues"

[tool.poetry]
include = [
    { path = "tests", format = "sdist" },
    { path = "CHANGES.rst", format = "sdist" },
    { path = "requirements.in", format = "sdist" },
    { path = "dev-requirements.in", format = "sdist" },
    { path = "Makefile", format = "sdist" },
    { path = "docs", format = "sdist" },
]

[tool.poetry.group.dev.dependencies]
alabaster = "0.7.6"
MarkupSafe = ">=2.0.0"
jinja2 = ">=3.1"
sphinx = ">=3.3.0"
sphinx-rtd-theme = ">=3"
coverage = ">=7.8.0"
ipython = ">=5.11"
mock = "5.2.0"
nose = "1.3.7"
pep8 = ">=1.7.1"
pip-tools = "^7.4.1"
pylint = "2.13.0"
bandit = ">=1.8.3"
black = ">=25.1.0"
codespell = ">=2.4.1"
flake8 = ">=7.2.0"
flake8-2020 = ">=1.8.1"
flake8-bugbear = ">=24.12.12"
flake8-comprehensions = ">=3.16.0"
isort = ">=5.13.2"
mypy = ">=1.15.0"
pytest = ">=8.3.5"
types-python-dateutil = ">=2.9"
types-pytz = ">=2025.2"
pre-commit = ">=4.0.1"
pyupgrade = ">=3.19.0"

[build-system]
requires = [ "poetry-core>=2.0.0,<3.0.0" ]
build-backend = "poetry.core.masonry.api"

